[gd_scene load_steps=9 format=2]

[ext_resource path="res://MiniMap/Frame.png" type="Texture" id=1]
[ext_resource path="res://MiniMap/background_minimap.png" type="Texture" id=2]
[ext_resource path="res://MiniMap/player_minimap.png" type="Texture" id=3]
[ext_resource path="res://MiniMap/earth_minimap.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Minimap.gd" type="Script" id=5]
[ext_resource path="res://MiniMap/mars_minimap.png" type="Texture" id=6]
[ext_resource path="res://MiniMap/iconfinder_technology-machine-electronic-device-17_4026443.png" type="Texture" id=7]
[ext_resource path="res://Other assets/package.png" type="Texture" id=8]

[node name="Minimap" type="MarginContainer"]
margin_right = 315.0
margin_bottom = 315.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
margin_right = 315.0
margin_bottom = 315.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 315.0
margin_bottom = 315.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 7.0
margin_top = 8.0
margin_right = 307.0
margin_bottom = 308.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="earth_minimap" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 65, 48 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="mars_minimap" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 177, 48 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 6 )

[node name="Player_minimap" type="Sprite" parent="MarginContainer/Grid"]
position = Vector2( 144, 131.5 )
scale = Vector2( 0.166667, 0.166667 )
texture = ExtResource( 3 )

[node name="iss_minimap" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 89, 216 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="package_minimap" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 57, 130 )
scale = Vector2( 0.0148148, 0.0148148 )
texture = ExtResource( 8 )
